--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="React Three Fiber application">
     <meta name="keywords" content="R3F, Three.js">
     <meta name="author" content="Jeslif Sam Fernandes">
-    <title>Amagotchi</title>
+    <title>Tamagotchi</title>
 </head>
 <body>
     <div id="root"></div>
